[gd_scene load_steps=8 format=3 uid="uid://b73rkuo5uajib"]

[ext_resource type="Script" path="res://scripts/click_game/win_screen_click_game.gd" id="1_ddhlr"]
[ext_resource type="Theme" uid="uid://8783p7rjqna0" path="res://assets/buttons/themes/app_theme.tres" id="1_jh03j"]
[ext_resource type="FontFile" uid="uid://clg3ch5sg37xq" path="res://assets/font/Montserrat-Bold.ttf" id="2_d8ocu"]
[ext_resource type="Texture2D" uid="uid://detwhko83a5on" path="res://assets/buttons/icons/repeat_arrow.png" id="3_dvds7"]
[ext_resource type="Texture2D" uid="uid://bbn762sxoj0jy" path="res://assets/buttons/icons/arrow_forward.png" id="4_gmluo"]
[ext_resource type="Texture2D" uid="uid://b3jtfqwuixldy" path="res://assets/buttons/icons/Home.png" id="5_rm616"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_asiq8"]
bg_color = Color(0.964706, 0.933333, 0.870588, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[node name="WinScreenClickGame" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_ddhlr")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -300.0
offset_right = 250.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_jh03j")
theme_override_styles/panel = SubResource("StyleBoxFlat_asiq8")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -183.0
offset_bottom = -121.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_d8ocu")
theme_override_font_sizes/font_size = 50
text = "Nivel Completado"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -49.0
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="RepeatButton" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
icon = ExtResource("3_dvds7")

[node name="ForwardButton" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
icon = ExtResource("4_gmluo")

[node name="HomeButton" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
icon = ExtResource("5_rm616")

[connection signal="pressed" from="Panel/HBoxContainer/RepeatButton" to="." method="_on_repeat_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/ForwardButton" to="." method="_on_forward_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/HomeButton" to="." method="_on_home_button_pressed"]
